--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>hELLO wORLD</h1>
 </head>
 <body>
-    
+    <p>New paragraph</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
