--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>New paragraph</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. (dropdown)</p>
 </body>
 </html>
